--- a/Bonfire.colloquyStyle/Contents/Resources/main.css
+++ b/Bonfire.colloquyStyle/Contents/Resources/main.css
@@ -1,5 +1,3 @@
-/*  Based on Fiat - by dzhim and nsraffy  */
-
 body {
   margin: 0;
   padding: 0;
@@ -36,56 +34,16 @@ a:hover {
   display: none;
 }
 
-.error:before {
-  content: "(";
-}
-
-.error:after {
-  content: ")";
-}
-
-.header_top {
-  display: none;
-
-}
-
-/* ------------------------------ Event ------------------------------ */
-.event {
+#shadow {
+  position: fixed;
   display: block;
-  padding: 5px 0 5px 110px;
-  border-top: #FFF 1px solid;
-  background-color: #d9e7fb;
-  border-bottom: #FFF 1px solid;
-  color: #363636;
-  font-size:0.75em;
-  text-shadow: rgba(255, 255, 255, 1) 0 1px 1px;
-}
-
-.event + .event {
-  border-top: none;
-}
-
-.event .time {
-  margin: 0 4px;
-  padding: 0;
-  display: block;
-  float: left;
-  color: #333333;
-  width:100px;
-  text-align:right;
-}
-
-.event .message {
+  top: 0;
+  left: 0;
   margin: 0;
-  padding-left: 5px;
-  color: #303030;
-  word-wrap: break-word;
-  -webkit-line-break: after-white-space;
-  -webkit-nbsp-mode: space;
-}
-
-.event a {
-  color: #404040;
+  padding: 0;
+  width: 100%;
+  height: 20px;
+  -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFFFF), to(#000000));
 }
 
 /* ------------------------------ Page ------------------------------ */
@@ -108,18 +66,16 @@ a:hover {
 
 .envelope .message .meta, .envelope .message .content {
   display: table-cell;
-  line-height: 1.4em;  
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 4px;
   margin-bottom: 0px;
+  padding: 4px 0 4px 4px;
+  line-height: 1.4em;  
   word-wrap: break-word;
   -webkit-line-break: after-white-space;
   -webkit-nbsp-mode: space;
 }
 
 .envelope .message .meta {
-  min-width: 100px;
+  min-width: 125px;
   border-right: 1px solid #B3B3B3;
   text-align: right;
   background-color: #EFEFEF;
@@ -134,7 +90,13 @@ a:hover {
 strong { display: none; } /* TEMP */
 
 .envelope .message .meta .sender {
-  display: inline;
+  position: fixed;
+  top: -900px;
+  left: -900px;
+}
+
+.envelope .message:first-of-type .meta .sender {
+  position: static;
   padding-right: 10px;
 }
 
@@ -142,13 +104,7 @@ strong { display: none; } /* TEMP */
   color: #666;
   font-weight: bold;
   text-decoration: none;
-  text-shadow: rgba(255, 255, 255, 1) 0 1px 1px;
-}
-
-.envelope .message.submessage .meta .sender {
-  position: fixed;
-  top: -900px;
-  left: -900px;
+  text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
 }
 
 .envelope .message .content {
@@ -182,3 +138,62 @@ strong { display: none; } /* TEMP */
 .member:hover {
   text-decoration: underline;
 }
+
+/* ------------------------------ Event ------------------------------ */
+.event {
+  display: block;
+  padding: 5px 0;
+  border-top: #FFF 1px solid;
+  background-color: #d9e7fb;
+  border-bottom: #FFF 1px solid;
+  color: #363636;
+  font-size:0.75em;
+  text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
+  overflow: hidden;
+}
+
+.event + .event {
+  border-top: none;
+}
+
+.event .time {
+  display: block;
+  float: left;
+  margin: 0 6px 0 0;
+  padding: 0;
+  width: 120px;
+  color: #999;
+  text-align: right;
+}
+
+.event .content {
+  float: left;
+  margin: 0;
+  padding-left: 5px;
+  color: #303030;
+  word-wrap: break-word;
+  -webkit-line-break: after-white-space;
+  -webkit-nbsp-mode: space;
+}
+
+.event .content .reason {
+  color: #999;
+}
+
+.event a {
+  color: #404040;
+}
+
+/* ------------------------------ Error ------------------------------ */
+.error {
+  color: #333;
+}
+
+.error:before {
+  content: "(";
+}
+
+.error:after {
+  content: ")";
+}
+
